fixing CR comments sort by note-type, 502 error that that doesn't raised
